Fix: Resolved issues with location filtering
and no-filter search in ExperienceController

- Adjusted the `getExperiences` method in the ExperienceController to
properly handle location filtering when only city is provided.
- Fixed the issue where searches without any filters returned no
results. Now, all experiences are returned correctly when no filters are
applied.
- Ensured compatibility with service implementation for dynamic queries
based on location parameters.
- Verified functionality via Postman testing, confirming proper results
for all query combinations, including no filters.